<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".StrukActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toko"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuju"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buntu"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:hint="@string/tanggal"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/nama"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/black" />

    <!--MAKANAN-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:hint="BARANG"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_qyt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:hint="BARANG"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/txt_sub"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_pajak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pajak"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/txt_tunai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tunai"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_kembalian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/kembalian"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/terima"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sudah"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_kembali"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/edit_phone"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#1A374D"
        android:text="KEMBALI"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>