<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PesananActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--TANGGAL-->

        <TextView
            android:id="@+id/txt_toko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="@string/toko"
            android:textColor="#022E57"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:paddingTop="20dp"
            android:text="@string/tanggal"
            android:textColor="#022E57"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_hasiltgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="dd/mmm/yyyy"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!--NAMA PEMBELI-->
        <TextView
            android:id="@+id/txt_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/nama"
            android:textColor="#022E57"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="Isi Nama Pembeli"
            android:inputType="text"
            android:maxLength="100"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!--MAKANAN-->
        <TextView
            android:id="@+id/txt_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/makanan"
            android:textColor="#022E57"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!--MAKANAN1-->
        <CheckBox
            android:id="@+id/cb_makanan1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/makanan1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!--MAKANAN2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_hargamak1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/hargamak1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_jummak1"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:hint="Qty"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="16dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_makanan2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/makanan2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_hargamak2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/hargamak2"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_jummak2"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:hint="Qty"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="16dp" />

        </LinearLayout>

        <!--MAKANAN3-->
        <CheckBox
            android:id="@+id/cb_makanan3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/makanan3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_hargamak3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/hargamak3"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_jummak3"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:hint="Qty"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="16dp" />
        </LinearLayout>

        <!--MINUMAN-->
        <TextView
            android:id="@+id/txt_minuman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/minuman"
            android:textColor="#022E57"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!--MINUMAN1-->
        <CheckBox
            android:id="@+id/cb_minuman1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/minuman1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!--MINUMAN2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_hargamin1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/hargamin1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_jummin1"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:hint="Qty"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="16dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_minuman2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/minuman2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_hargamin2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/hargamin2"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_jummin2"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:hint="Qty"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="16dp" />
        </LinearLayout>

        <!--MINUMAN3-->
        <CheckBox
            android:id="@+id/cb_minuman3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/minuman3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_hargamin3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/hargamin3"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_jummin3"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:hint="Qty"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="16dp" />
        </LinearLayout>

        <!--BUTTON SUB, PAJAK, TOTAL-->

        <!--TOTAL SUB-->

        <Button
            android:id="@+id/btn_hitung"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/edit_phone"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#1A374D"
            android:text="Hitung"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/txt_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/sub"
            android:textColor="#022E57"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_hasilsub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="Sub Total"
            android:textColor="#022E57"
            android:textSize="16sp" />

        <!--PAJAK 10%-->
        <TextView
            android:id="@+id/txt_pajak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/pajak"
            android:textColor="#022E57"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_hasilpajak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="Pajak 10%"
            android:textColor="#022E57"
            android:textSize="16sp" />

        <!--TOTAL-->
        <TextView
            android:id="@+id/txt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/total"
            android:textColor="#022E57"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_hasiltotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="Total Pembayaran"
            android:textColor="#022E57"
            android:textSize="16sp" />

        <!--TUNAI-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_tunai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingTop="20dp"
                android:text="@string/tunai"
                android:textColor="#022E57"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_tunai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="20dp"
                android:hint="JUMLAH UANG "
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="italic" />
        </LinearLayout>

        <!--BUTTON KEMBALIAN-->
        <Button
            android:id="@+id/btn_hitungkembalian"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/edit_phone"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#1A374D"
            android:text="Hitung Kembalian"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_kembalian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/kembalian"
                android:textColor="#022E57"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_hasilkembalian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="KEMBALIAN"
                android:paddingTop="5dp"
                android:textColor="#022E57"
                android:textSize="30sp"
                android:textStyle="italic" />
        </LinearLayout>

        <!--BUTTON KEMBALIAN-->
        <Button
            android:id="@+id/btn_struk"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/edit_phone"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#1A374D"
            android:onClick="BuatStruk"
            android:text="Struk"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
</ScrollView>